[package]
name = "identyhash"
version = "0.1.0"
authors = ["Trix Cyrus"]
edition = "2021"
description = "A CLI tool to identify hash types."
license = "MIT"
repository = "https://github.com/TrixSec/identyhash"
readme = "README.md"
keywords = ["hash", "identify", "hashes"]
categories = ["cryptography"]

[dependencies]
                 